# aa-miningtax

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
miningtax/: README.md  admin.py  api_views.py  apps.py  billing.py  csv_views.py  forms.py  models.py  payments.py  pdf_export.py  pdf_views.py  schedule.py  services.py  signals.py  tasks.py  urls.py  views.py
miningtax/locale/de/LC_MESSAGES/: django.mo  django.po
miningtax/locale/es/LC_MESSAGES/: django.po
miningtax/locale/fr/LC_MESSAGES/: django.po
miningtax/locale/ko/LC_MESSAGES/: django.po
miningtax/locale/ru/LC_MESSAGES/: django.po
miningtax/locale/uk/LC_MESSAGES/: django.po
miningtax/management/commands/: fix_ledger_names.py  populate_ore_categories.py  populate_ore_reprocessing.py
miningtax/migrations/: 0003_general_alter_alliancebillingrecord_options_and_more.py  0004_alter_general_options.py  0005_alter_general_options.py  0006_alter_miningledgerentry_unique_together.py  0007_alliancebillingrecord_auto_verified_treasuryconfig.py  0008_alter_moonrental_corporation_and_more.py  0009_alter_general_options.py  0010_sovsystem_and_more.py  0011_alliancemoon_structure_name.py  0012_janiceconfig.py  0013_taxexemption.py  0014_orecategory_locked.py  0015_orecategoryrule.py  0016_ledger_location_unique.py  0017_general_corp_billing_permission.py  0018_general_permission_labels.py  0019_taxablescope.py  0020_rename_daily_sync_task.py
miningtax/templates/miningtax/: _nav.html  alliance_overview.html  dashboard.html  pilot_detail.html  settings.html
miningtax/templatetags/: miningtax_tags.py
