[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-miningtax"
description = "Mining Tax Plugin for Alliance Auth"
readme = "README.md"
keywords = [
    "allianceauth",
    "eveonline",
    "mining",
    "tax",
]
license = { file = "LICENSE" }
authors = [
    { name = "Zer0C0ol1337" },
]
requires-python = ">=3.10,<3.15"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth>=4.6",
    "django-esi>=4",
    "reportlab>=4",
]

[project.optional-dependencies]
# Empfohlen: Corptools für DB-basiertes Mining-Caching (weniger ESI-Calls)
corptools = [
    "allianceauth-corptools",
]

[project.urls]
Tracker = "https://github.com/Zer0C0ol1337/aa-miningtax/issues"

[tool.hatch]
version.path = "miningtax/__init__.py"
build.include = [
    "/miningtax",
]
