[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-miningtax"
description = "Mining Tax Plugin for Alliance Auth"
readme = "README.md"
keywords = [
    "allianceauth",
    "eveonline",
    "mining",
    "tax",
]
license = { file = "LICENSE" }
authors = [
    { name = "Zer0C0ol1337" },
]
requires-python = ">=3.10,<3.15"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth>=5.0",
    "django-esi>=4",
    "reportlab>=4",
]

[project.optional-dependencies]
# Recommended: corptools caches mining data in the database, cutting ESI calls
corptools = [
    "allianceauth-corptools",
]
# Recommended: eveuniverse supplies authoritative type names and reprocessing
# recipes. Without it the plugin still runs — every use is guarded — but ore
# whose category cannot be derived falls back to the Default tax rate, and
# refined-value pricing is unavailable, so ore is valued at the raw ESI price.
eveuniverse = [
    "django-eveuniverse",
]

[project.urls]
Homepage = "https://github.com/Zer0C0ol1337/aa-miningtax"
Changelog = "https://github.com/Zer0C0ol1337/aa-miningtax/blob/main/CHANGELOG.md"
Tracker = "https://github.com/Zer0C0ol1337/aa-miningtax/issues"

[tool.hatch]
version.path = "miningtax/__init__.py"
build.include = [
    "/miningtax",
]